force-app/main/default/objects/copado__Pull_Request__c/copado__Pull_Request__c.object-meta.xml
<CustomObject>
    <label>Pull Request</label>
    <nameField>
        <label>Pull Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pull Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>