force-app/main/default/objects/copado__Pull_Request__c/fields/copado__Merged__c.field-meta.xml
<CustomField>
    <fullName>copado__Merged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merged</label>
    <type>Checkbox</type>
</CustomField>