force-app/main/default/objects/copado__Pull_Request__c/fields/copado__Url__c.field-meta.xml
<CustomField>
    <fullName>copado__Url__c</fullName>
    <description>Pull Request Url</description>
    <label>Url</label>
    <type>Url</type>
</CustomField>