force-app/main/default/objects/copado__Pull_Request__c/fields/copado__User_Story__c.field-meta.xml
<CustomField>
    <fullName>copado__User_Story__c</fullName>
    <label>User Story</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipLabel>Pull Requests</relationshipLabel>
    <relationshipName>Pull_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>